# claude-telegram

./: .env.example  .gitignore  .reset  Dockerfile  README.md  bot.py  claude-telegram-bot.tar  docker-compose.yml  docker-compose.yml.save  entrypoint.sh  pyproject.toml  requirements.txt
claude-telegram-bot/: .env.example
claude/settings/dot-claude/: CLAUDE.md
claude_telegram/: __init__.py  __main__.py  bot.py  commands.py  config.py  handler.py
claude_telegram/claude/: __init__.py  session.py  tools.py
claude_telegram/telegram/: client.py  extract.py  files.py  stream.py
obsidian/: Dockerfile  entrypoint.sh
settings/dot-claude/: CLAUDE.md
src/claude_telegram/: __init__.py  __main__.py  app.py
src/claude_telegram/attachments/: __init__.py  service.py
src/claude_telegram/claude/: __init__.py  events.py  runtime.py
src/claude_telegram/config/: logging.py  settings.py
src/claude_telegram/domain/: models.py
src/claude_telegram/persistence/: database.py  repositories.py
src/claude_telegram/sessions/: __init__.py  coordinator.py
src/claude_telegram/telegram/: commands.py  draft_api.py  middleware.py  polling.py  (+2 more)
tests/: __init__.py  conftest.py  test_app.py  test_commands.py  test_config.py  test_support.py
tests/attachments/: test_service.py
tests/claude/: __init__.py  test_runtime.py  test_tools.py
tests/config/: test_settings.py
tests/persistence/: __init__.py  test_repositories.py
tests/sessions/: __init__.py  test_coordinator.py
tests/telegram/: test_commands.py  test_extract.py  test_files.py  test_presenter.py  test_stream.py
(+9 files in other folders)
